hack/manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx
            port:
              number: 80
  #     - path: /api
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: backend
  #           port:
  #             number: 8080
  #     - path: /jenkins
  #       pathType: Prefix
  #       backend:
  #         service:
  #           name: jenkins
  #           namespace: devops-system
  #           port:
  #             number: 8080
